--- a/index.html
+++ b/index.html
@@ -96,6 +96,18 @@
             box-shadow: 0 0 0 4px rgba(234, 179, 8, 0.2);
         }
 
+        /* 🆕 Indicador WebSocket específico */
+        .api-indicator.websocket::after {
+            --status-color: #10b981;
+            /* Verde mais vibrante */
+            animation: pulse 1s infinite;
+        }
+
+        .api-indicator.websocket .w-3 {
+            background: linear-gradient(135deg, #10b981 0%, #059669 100%);
+            box-shadow: 0 0 0 4px rgba(16, 185, 129, 0.3);
+        }
+
         /* 🆕 Indicador de conexão API */
         .api-indicator {
             position: relative;
@@ -161,6 +173,27 @@
             /* Conector escuro */
         }
 
+        /* 🆕 Animações WebSocket */
+        #wsStatusDot {
+            transition: all 0.3s ease;
+        }
+
+        #wsStatusText {
+            transition: all 0.3s ease;
+        }
+
+        .api-indicator {
+            min-width: 150px;
+            /* Evitar "pulo" do layout */
+        }
+
+        /* Notificação menos intrusiva */
+        .notification-subtle {
+            background: rgba(16, 185, 129, 0.9);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(16, 185, 129, 0.3);
+        }
+
         @keyframes spin {
             0% {
                 transform: rotate(0deg);
@@ -169,6 +202,8 @@
             100% {
                 transform: rotate(360deg);
             }
+
+
         }
     </style>
 </head>
@@ -204,14 +239,21 @@
 
                 <!-- Status e controles atualizados -->
                 <div class="flex items-center space-x-6">
-                    <!-- 🆕 Indicador de conexão API -->
+                    <!-- 🆕 Indicador melhorado API + WebSocket -->
                     <div class="flex items-center space-x-2 api-indicator" id="apiIndicator">
-                        <div class="w-3 h-3 status-offline rounded-full"></div>
+                        <div class="relative">
+                            <div class="w-3 h-3 status-offline rounded-full" id="apiStatusDot"></div>
+                            <!-- 🆕 Mini indicador WebSocket -->
+                            <div class="w-2 h-2 bg-yellow-400 rounded-full absolute -top-1 -right-1 hidden"
+                                id="wsStatusDot"></div>
+                        </div>
                         <div class="flex flex-col">
                             <span class="text-sm text-gray-600" id="apiStatusText">Conectando...</span>
-                            <span class="text-xs text-gray-400" id="apiVersionText">V2.1.0</span>
+                            <div class="flex items-center space-x-1">
+                                <span class="text-xs text-gray-400" id="apiVersionText">V2.1.0</span>
+                                <span class="text-xs text-green-600 hidden" id="wsStatusText">+ WS</span>
+                            </div>
                         </div>
-                        <!-- Loading spinner inicial -->
                         <div class="loading-spinner" id="loadingSpinner"></div>
                     </div>
 
