--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hero Band Dashboard - Sistema IoT V2.1.0 | Big Hero Team</title>
+    <title>Hero Band Dashboard - Sistema IoT V3.0 | Big Hero Team</title>
 
     <meta name="description"
         content="Hero Band - Sistema de Monitoramento IoT Industrial desenvolvido pela equipe Big Hero">
@@ -231,8 +231,13 @@
                         </div>
                         <div class="border-l border-gray-300 h-8 mx-2"></div>
                         <div>
-                            <h1 class="text-xl font-bold text-gray-800">Hero Band</h1>
-                            <p class="text-xs text-gray-500">Sistema IoT V2.1.0 - Big Hero Team</p>
+                            <h1 class="text-xl font-bold text-gray-800 flex items-center">
+                                Hero Band
+                                <!-- 🆕 Badge V3.0 -->
+                                <span class="ml-2 text-xs bg-green-100 text-green-700 px-2 py-1 rounded-full">V3.0
+                                    Flat</span>
+                            </h1>
+                            <p class="text-xs text-gray-500">Sistema IoT V3.0 - Big Hero Team</p>
                         </div>
                     </div>
                 </div>
@@ -349,6 +354,14 @@
                     <span class="font-medium">Funcionários</span>
                 </a>
 
+                <!-- 🆕 Menu Performance V3.0 -->
+                <a href="#" onclick="showPerformance()"
+                    class="flex items-center space-x-3 px-4 py-3 text-gray-700 rounded-lg hover:bg-baymax-100 transition-smooth menu-item">
+                    <i class="fas fa-tachometer-alt text-hero-accent"></i>
+                    <span class="font-medium">Performance V3.0</span>
+                    <span class="text-xs bg-green-100 text-green-700 px-2 py-1 rounded-full ml-auto">New</span>
+                </a>
+
                 <!-- Separador -->
                 <hr class="my-4 border-gray-200">
 
@@ -372,10 +385,12 @@
             <div class="absolute bottom-4 left-4 right-4">
                 <div class="bg-gradient-hero rounded-lg p-4 text-white text-center">
                     <i class="fas fa-cloud text-2xl mb-2"></i>
-                    <p class="text-sm font-medium">API V2.1.0</p>
+                    <p class="text-sm font-medium">API V3.0 Flat</p>
                     <p class="text-xs opacity-90" id="sidebarApiStatus">Conectando...</p>
-                    <!-- Métricas de performance -->
+                    <!-- 🆕 Métricas V3.0 específicas -->
                     <div class="mt-2 text-xs opacity-75">
+                        <div>Performance: <span id="performanceGrade">--</span></div>
+                        <div>Flat Structure: <span id="flatStructureStatus">Active</span></div>
                         <div>Resp: <span id="avgResponseTime">--</span>ms</div>
                         <div>Calls: <span id="totalApiCalls">0</span></div>
                     </div>
@@ -415,8 +430,9 @@
                                 <p class="text-gray-500 text-sm font-medium">Total Funcionários</p>
                                 <p class="text-3xl font-bold text-gray-800 total-employees">--</p>
                                 <p class="text-green-500 text-sm">
-                                    <span id="employeesSource">Carregando...</span>
+                                    <span id="employeesSource">API V3.0</span> <!-- 🔄 Fixo -->
                                 </p>
+
                             </div>
                             <div class="w-12 h-12 bg-blue-100 rounded-lg flex items-center justify-center">
                                 <i class="fas fa-users text-blue-600 text-xl"></i>
@@ -433,6 +449,7 @@
                                 <p class="text-green-500 text-sm">
                                     <span id="activeSource">API tempo real</span>
                                 </p>
+
                             </div>
                             <div class="w-12 h-12 bg-green-100 rounded-lg flex items-center justify-center">
                                 <i class="fas fa-user-check text-green-600 text-xl"></i>
@@ -449,6 +466,7 @@
                                 <p class="text-red-500 text-sm">
                                     <span id="alertsSource">Monitoramento ativo</span>
                                 </p>
+
                             </div>
                             <div class="w-12 h-12 bg-red-100 rounded-lg flex items-center justify-center">
                                 <i class="fas fa-exclamation-triangle text-red-600 text-xl"></i>
@@ -465,6 +483,7 @@
                                 <p class="text-blue-500 text-sm">
                                     <span id="sectorsSource">100% cobertura</span>
                                 </p>
+
                             </div>
                             <div class="w-12 h-12 bg-purple-100 rounded-lg flex items-center justify-center">
                                 <i class="fas fa-building text-purple-600 text-xl"></i>
@@ -638,8 +657,9 @@
                                     <option>Último mês</option>
                                 </select>
                                 <!-- Indicador de fonte de dados -->
-                                <span class="text-xs px-2 py-1 rounded-full bg-gray-100 text-gray-600"
-                                    id="activityDataSource">Mock</span>
+                                <span class="text-xs px-2 py-1 rounded-full bg-green-100 text-green-700"
+                                    id="activityDataSource">API V3.0</span>
+
                             </div>
                         </div>
                         <canvas id="activityChart" height="200"></canvas>
@@ -650,8 +670,9 @@
                         <div class="flex items-center justify-between mb-4">
                             <h3 class="text-lg font-semibold text-gray-800">Distribuição por Setores</h3>
                             <!-- Indicador de fonte de dados -->
-                            <span class="text-xs px-2 py-1 rounded-full bg-gray-100 text-gray-600"
-                                id="sectorsDataSource">Mock</span>
+                            <span class="text-xs px-2 py-1 rounded-full bg-green-100 text-green-700"
+                                id="sectorsDataSource">API V3.0</span>
+
                         </div>
                         <canvas id="zonesChart" height="200"></canvas>
                     </div>
@@ -702,7 +723,74 @@
                 <p class="text-gray-600">Seção em desenvolvimento... (Próximo: Capítulo 6.5)</p>
             </div>
 
+            <!-- 🆕 Seção Performance V3.0 -->
+            <div id="performanceSection" class="section-content hidden">
+                <div class="flex items-center justify-between mb-6">
+                    <h2 class="text-2xl font-bold text-gray-800">Performance V3.0 Analytics</h2>
+                    <button onclick="refreshPerformanceData()"
+                        class="bg-hero-primary text-white px-4 py-2 rounded-lg hover:bg-hero-secondary transition-smooth">
+                        <i class="fas fa-sync-alt mr-2"></i>Atualizar
+                    </button>
+                </div>
+
+                <!-- Cards de Performance V3 -->
+                <div class="grid grid-cols-1 md:grid-cols-4 gap-6 mb-8">
+                    <div class="bg-white rounded-xl shadow-lg p-6">
+                        <div class="flex items-center justify-between">
+                            <div>
+                                <p class="text-gray-500 text-sm font-medium">Performance Grade</p>
+                                <p class="text-3xl font-bold text-green-600" id="perfGrade">--</p>
+                                <p class="text-green-500 text-sm">V3.0 Flat Structure</p>
+                            </div>
+                            <div class="w-12 h-12 bg-green-100 rounded-lg flex items-center justify-center">
+                                <i class="fas fa-tachometer-alt text-green-600 text-xl"></i>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bg-white rounded-xl shadow-lg p-6">
+                        <div class="flex items-center justify-between">
+                            <div>
+                                <p class="text-gray-500 text-sm font-medium">Improvement vs V2</p>
+                                <p class="text-3xl font-bold text-blue-600" id="improvementPercent">--</p>
+                                <p class="text-blue-500 text-sm">Real benchmark</p>
+                            </div>
+                            <div class="w-12 h-12 bg-blue-100 rounded-lg flex items-center justify-center">
+                                <i class="fas fa-chart-line text-blue-600 text-xl"></i>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bg-white rounded-xl shadow-lg p-6">
+                        <div class="flex items-center justify-between">
+                            <div>
+                                <p class="text-gray-500 text-sm font-medium">Health Analytics</p>
+                                <p class="text-3xl font-bold text-purple-600" id="healthAnalyticsCount">--</p>
+                                <p class="text-purple-500 text-sm">V3.0 Exclusive</p>
+                            </div>
+                            <div class="w-12 h-12 bg-purple-100 rounded-lg flex items-center justify-center">
+                                <i class="fas fa-heartbeat text-purple-600 text-xl"></i>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bg-white rounded-xl shadow-lg p-6">
+                        <div class="flex items-center justify-between">
+                            <div>
+                                <p class="text-gray-500 text-sm font-medium">Firebase Billing</p>
+                                <p class="text-3xl font-bold text-orange-600" id="billingReduction">-50%</p>
+                                <p class="text-orange-500 text-sm">Flat structure</p>
+                            </div>
+                            <div class="w-12 h-12 bg-orange-100 rounded-lg flex items-center justify-center">
+                                <i class="fas fa-coins text-orange-600 text-xl"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </main>
+
 
     </div>
 
@@ -768,6 +856,7 @@
                 </div>
             </form>
         </div>
+
     </div>
 
     <!-- Scripts atualizados -->
@@ -775,6 +864,8 @@
     <script src="assets/js/api-service.js"></script>
     <script src="assets/js/charts.js"></script>
     <script src="assets/js/app.js"></script>
+
+
 
     <!-- 🆕 Script adicional para funções do header -->
     <script>
@@ -839,13 +930,10 @@
             indicators.forEach(id => {
                 const element = document.getElementById(id);
                 if (element) {
-                    if (isApiMode) {
-                        element.textContent = 'API V2.1.0';
+                    
+                        element.textContent = 'API V3.0';
                         element.className = 'text-xs px-2 py-1 rounded-full bg-green-100 text-green-700';
-                    } else {
-                        element.textContent = 'Demo';
-                        element.className = 'text-xs px-2 py-1 rounded-full bg-yellow-100 text-yellow-700';
-                    }
+                    
                 }
             });
         }
